[gd_scene load_steps=7 format=3 uid="uid://d1i1d6wru0mcd"]

[ext_resource type="Script" path="res://assets/scripts/fish_spawner.gd" id="1_tjf73"]
[ext_resource type="PackedScene" uid="uid://culj08yoshoj1" path="res://assets/scenes/base_fish.tscn" id="2_gwfo4"]
[ext_resource type="Texture2D" uid="uid://bjp31ob7ynuu0" path="res://assets/sprites/Map 3.png" id="3_tnhuo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_poohc"]
size = Vector2(766, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26n0t"]
size = Vector2(583, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxerc"]
size = Vector2(253, 136)

[node name="fish_spawner" type="Marker2D" groups=["fish_spawner"]]
gizmo_extents = 0.0
script = ExtResource("1_tjf73")
fish_scene = ExtResource("2_gwfo4")

[node name="Map3" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_tnhuo")

[node name="depth_1" type="Area2D" parent="."]
position = Vector2(-252, -67)

[node name="CollisionShape2D" type="CollisionShape2D" parent="depth_1"]
position = Vector2(383, -34)
shape = SubResource("RectangleShape2D_poohc")

[node name="depth_2" type="Area2D" parent="."]
position = Vector2(-68, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="depth_2"]
position = Vector2(291, -63)
shape = SubResource("RectangleShape2D_26n0t")
debug_color = Color(0.435294, 0.490196, 0.905882, 0.419608)

[node name="depth_3" type="Area2D" parent="."]
position = Vector2(262, 197)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="depth_3"]
position = Vector2(126.5, -69)
shape = SubResource("RectangleShape2D_mxerc")
